tests/should_fail/for_destructure_on_bool.nv
module test
// for destructure on a non-list (Bool)
for (a, b) in true {
    println(Cast::string(a))
}
